letter spacing fix and titles

--- a/_src/sass/_components--typography.scss
+++ b/_src/sass/_components--typography.scss
@@ -22,7 +22,7 @@ h3, p, p.caption, p.button, a, ul, li {
 //Title
 h3 {
 	font-size:14px;
-	letter-spacing: 0.3px;
+	letter-spacing: 2px;
 	line-height: 1.5;
 	text-transform:uppercase;
 	text-align:center;
@@ -37,7 +37,7 @@ p {
 	}
 	&.button {
 		font-size:14px;
-		letter-spacing: 0.5px;
+		letter-spacing: 2px;
 		text-transform: uppercase;
 		text-align:center;
 	}
