--- a/_src/sass/_layout--common.scss
+++ b/_src/sass/_layout--common.scss
@@ -125,7 +125,7 @@ footer {
 			display: inline-block;
 			margin-right: 10px;
 			font-size: 14px;
-		    letter-spacing: 0.3px;
+		    letter-spacing: 2px;
 		    text-transform: uppercase;
 		    a {
 		    	text-decoration: none;
