--- a/css/main.css
+++ b/css/main.css
@@ -218,7 +218,7 @@ h3, p, p.caption, p.button, a, ul, li {
 
 h3 {
   font-size: 14px;
-  letter-spacing: 0.3px;
+  letter-spacing: 2px;
   line-height: 1.5;
   text-transform: uppercase;
   text-align: center; }
@@ -230,7 +230,7 @@ p {
     font-size: 12px; }
   p.button {
     font-size: 14px;
-    letter-spacing: 0.5px;
+    letter-spacing: 2px;
     text-transform: uppercase;
     text-align: center; }
 
@@ -340,7 +340,7 @@ footer {
       display: inline-block;
       margin-right: 10px;
       font-size: 14px;
-      letter-spacing: 0.3px;
+      letter-spacing: 2px;
       text-transform: uppercase; }
       footer ul li a {
         text-decoration: none;
